tests/ui/parser/diff-markers/struct.stderr
error: encountered diff marker
  --> $DIR/struct.rs:2:1
   |
LL | <<<<<<< HEAD
   | ^^^^^^^ between this marker and `=======` is the code being merged into
LL |     x: u8,
LL | =======
   | ------- between this marker and `>>>>>>>` is the incoming code
LL |     x: i8,
LL | >>>>>>> branch
   | ^^^^^^^ this marker concludes the conflict region
   |
   = note: conflict markers indicate that a merge was started but could not be completed due to merge conflicts
           to resolve a conflict, keep only the code you want and then delete the lines containing conflict markers
   = note: for an explanation on these markers from the `git` documentation:
           visit <https://git-scm.com/book/en/v2/Git-Tools-Advanced-Merging#_checking_out_conflicts>

error: aborting due to 1 previous error

