tests/ui/parser/diff-markers/struct.rs
struct S {
<<<<<<< HEAD //~ ERROR encountered diff marker
    x: u8,
=======
    x: i8,
>>>>>>> branch
}
